    '.jobs[].job_resources'.
 -- Fix sstat/sattach protocol errors for steps on higher version slurmd's
    (regressions since 20.11.0rc1 and 16.05.1rc1 respectively).
 -- slurmd - Avoid a crash when starting slurmd version 24.05 with
    SlurmdSpoolDir files that have been upgraded to a newer major version of
    Slurm. Log warnings instead.

* Changes in Slurm 24.05.4
==========================
 -- Fix generic int sort functions.
 -- Fix user look up using possible unrealized uid in the dbd.
 -- Fix FreeBSD compile issue with tls/none plugin.
 -- slurmrestd - Fix regressions that allowed slurmrestd to be run as SlurmUser
    when SlurmUser was not root.
 -- mpi/pmix fix race conditions with het jobs at step start/end which could
    make srun to hang.
 -- Fix not showing some SelectTypeParameters in scontrol show config.
 -- Avoid assert when dumping removed certain fields in JSON/YAML.
 -- Improve how shards are scheduled with affinity in mind.
 -- Fix MaxJobsAccruePU not being respected when MaxJobsAccruePA is set
    in the same QOS.
 -- Prevent backfill from planning jobs that use overlapping resources for the
    same time slot if the job's time limit is less than bf_resolution.
 -- Fix memory leak when requesting typed gres and --[cpus|mem]-per-gpu.
 -- Prevent backfill from breaking out due to "system state changed" every 30
    seconds if reservations use REPLACE or REPLACE_DOWN flags.
 -- slurmrestd - Make sure that scheduler_unset parameter defaults to true even
    when the following flags are also set: show_duplicates, skip_steps,
    disable_truncate_usage_time, run_away_jobs, whole_hetjob,
    disable_whole_hetjob, disable_wait_for_result, usage_time_as_submit_time,
    show_batch_script, and or show_job_environment. Additionaly, always make
    sure show_duplicates and disable_truncate_usage_time default to true when
    the following flags are also set: scheduler_unset, scheduled_on_submit,